passage de variables à une autre page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
     <button class="but" type="button">
         Fetch
     </button>
+    <h2> Passage de paramètres à une autre page</h2>
+    <p> Démo d'un lien avec réccupération d'url</p>
 
+    <a href='personnage.html?id=123'>
+        ici il faut cliquer pour transmettre une information à une autre page
+    </a>
     <script src="script.js"></script>
 </body>
 </html>
