avec "gestion" des errreurs

--- a/index.html
+++ b/index.html
@@ -7,37 +7,28 @@
 <body>
     <h1>Quelques exemples d'utilisation de Fetch</h1>
 
-
     <h2> Premier exemple</h2>
-    <p> Utilisation basique</p>
-    <button id="boutton1" type="button">
-            Fetch
-    </button>
-
+    <p> Utilisation basique et minimale de fetch</p>
+    <button id="boutton1" type="button"> Fetch </button>
 
     <h2> deuxième exemple</h2>
-    <p> Utilisation basique</p>
-    <button id="boutton2" type="button">
-        Fetch
-    </button>
+    <p> Utilisation basique mais avec async et await</p>
+    <button id="boutton2" type="button"> Fetch</button>
 
-    <h2> Deuxième exemple</h2>
-    <p> Utilisation plus complète</p>
-    <button class="but" type="button">
-        Fetch
-    </button>
+    <h2> Troisième exemple</h2>
+    <p> Utilisation plus complète avec "gestion des erreurs"</p>
+    <button id="boutton3" type="button">Fetch</button>
 
-    <h2> Troisème exemple</h2>
+    <h2> Quatrième exemple</h2>
     <p> Avec réccupération d'un tableau de données.</p>
-    <button class="but" type="button">
-        Fetch
-    </button>
+    <button id="boutton4" type="button">Fetch</button>
+
     <h2> Passage de paramètres à une autre page</h2>
     <p> Démo d'un lien avec réccupération d'url</p>
-
     <a href='personnage.html?id=123'>
         ici il faut cliquer pour transmettre une information à une autre page
     </a>
+
     <script src="script.js"></script>
 </body>
 </html>
